--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,15 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './utils/var';
+@import './utils/visually-hidden';
+@import './base/global';
+@import './components/container';
+@import './layout/header';
+@import './layout/products';
+@import './layout/about';
+@import './layout/advantages';
+@import './layout/gallery';
+@import './layout/reviews';
+@import './layout/contacts';
+@import './layout/footer';
