--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -3,15 +3,15 @@
         <h2 class="visually-hidden">Advantages</h2>
         <ul class="advantages-list">
             <li class="advantages-list__item">
-                <h3 class="advantages-list__item-title">721</h3>
+                <p class="advantages-list__item-title">721</p>
                 <p class="advantages-list__item-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="advantages-list__item">
-                <h3 class="advantages-list__item-title">16kg</h3>
+                <p class="advantages-list__item-title">16kg</p>
                 <p class="advantages-list__item-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="advantages-list__item">
-                <h3 class="advantages-list__item-title">84</h3>
+                <p class="advantages-list__item-title">84</p>
                 <p class="advantages-list__item-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
         </ul>
