create section Contacts

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -1,6 +1,6 @@
 .advantages {
   padding-bottom: 97px;
-  background-color: var(--backgound-section);
+  background-color: var(--background-section);
 
   @media screen and(min-width: 768px) {
     padding-bottom: 140px;
