--- a/src/sass/utils/_var.scss
+++ b/src/sass/utils/_var.scss
@@ -15,7 +15,7 @@
     /* текст в карточках, ссылках, цвет кнопок, цвет body 💯 */
     --button-gray: #ecebeb;
     /* цвет неактивных кнопок */
-    --backgound-section: #fff5f6;
+    --background-section: #fff5f6;
     /* цвет About, Footer, Advantages ⬜ */
     --background-label: #ffa5ba;
     /* цвет лейбла заголовка Products, About, Footer, времени в Contacts ⏰ */
