--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -306,9 +306,15 @@ body {
 
 .products__container {
   padding: 160px 40px 40px;
-  //   text-align: center;
-
   border-radius: 24px;
+
+  @media screen and (min-width: 768px) {
+    padding: 150px 15px 40px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    padding: 160px 45px 50px;
+  }
 }
 
 .products__container--color-ice-cream {
@@ -331,7 +337,7 @@ body {
   letter-spacing: 0.04em;
   text-transform: uppercase;
 
-  color: #ffffff;
+  color: var(--primary-white-color);
 }
 
 .products__title::after {
@@ -348,19 +354,23 @@ body {
   margin: 30px auto 0;
 }
 
-// .products__title--margin {
-//   margin-bottom: 30px;
-// }
-
 .products__text {
-  font-weight: bold;
+  font-weight: 700;
   font-size: 14px;
-  line-height: 1.5;
+  line-height: 1.52;
 
   text-align: center;
   letter-spacing: 0.04em;
 
-  color: #ffffff;
+  color: var(--primary-white-color);
+
+  @media screen and (min-width: 768px) {
+    line-height: 1.76;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 16px;
+  }
 }
 
 .products__text--margin {
