--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,38 +1,3 @@
-// базовый сброс
-a {
-  text-decoration: none;
-}
-
-ul,
-ol {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-// body
-
-body {
-  font-family: var(--text-first);
-}
-
 // section
 .section-products {
   padding-top: 120px;
@@ -42,7 +7,7 @@ body {
     padding-bottom: 110px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     padding-top: 125px;
     padding-bottom: 120px;
   }
@@ -50,18 +15,15 @@ body {
 
 // container
 .container-products {
+  min-width: 320px;
   padding-left: 20px;
   padding-right: 20px;
   margin-right: auto;
   margin-left: auto;
 
-  @media screen and (min-width: 320px) {
-    width: 320px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
   }
-
-  //   @media screen and (min-width: 480px) {
-  //     width: 480px;
-  //   }
 
   @media screen and (min-width: 768px) {
     width: 768px;
@@ -69,10 +31,10 @@ body {
     padding-right: 34px;
   }
 
-  @media screen and (min-width: 1280px) {
-    width: 1280px;
-    padding-left: 115px;
-    padding-right: 115px;
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    padding-left: 75px;
+    padding-right: 75px;
   }
 }
 
@@ -114,7 +76,7 @@ body {
     font-size: 48px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     font-size: 58px;
     letter-spacing: 0.06em;
   }
@@ -129,7 +91,7 @@ body {
     margin-bottom: 40px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
   }
 }
@@ -140,14 +102,13 @@ body {
     margin: -10px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     display: flex;
     margin: -12px;
   }
 }
 
 .products__item {
-  background-color: aqua;
   border-bottom-left-radius: 24px;
   border-bottom-right-radius: 24px;
   position: relative;
@@ -168,7 +129,7 @@ body {
     padding-top: 105px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 72px) / 3);
     margin: 12px;
     padding-top: 210px;
@@ -208,7 +169,7 @@ body {
     }
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     width: 335px;
     height: 335px;
     background-image: url('../images/products/desktop/ice-cream-desktop.png');
@@ -252,7 +213,7 @@ body {
     }
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     width: 335px;
     height: 335px;
     background-image: url('../images/products/desktop/ice-coffee-desktop.png');
@@ -296,7 +257,7 @@ body {
     }
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     width: 335px;
     height: 335px;
     background-image: url('../images/products/desktop/milkshakes-desktop.png');
@@ -319,7 +280,7 @@ body {
     padding: 150px 15px 40px;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     padding: 160px 45px 50px;
   }
 }
@@ -375,7 +336,7 @@ body {
     line-height: 1.76;
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     font-size: 16px;
   }
 }
@@ -440,7 +401,7 @@ body {
     transform: translateX(0);
   }
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     font-size: 13px;
   }
 }
@@ -464,7 +425,7 @@ body {
   text-align: center;
   text-transform: uppercase;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     margin-bottom: 15px;
     font-size: 18px;
   }
