--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -397,7 +397,7 @@
   transform: translateX(100%);
   transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &.is-open {
+  &.is-open-recipe {
     transform: translateX(0);
   }
 
