--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -442,7 +442,7 @@
 
 .recipe-ingredient__item {
   border-bottom: 1px solid #907e82;
-  padding: 2px 0 4px;
+  padding: 3px 0;
 }
 
 .recipe-instructions__item {
