--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -5,9 +5,9 @@
         <div class="about__flex">
             <div class="about__img">
                 <picture>
-                    <source srcset="../images/about/mobile/cow-mobile.png 1x, ../images/about/mobile/cow-mobile@2x.png 2x" type="image/png">
-                    <source srcset="../images/about/tablet/cow-tablet.png 1x, ../images/about/tablet/cow-tablet@2x.png 2x" media="(min-width: 768px)" type="image/png">
-                    <source srcset="../images/about/dekstop/cow-dekstop.png 1x, ../images/about/dekstop/cow-dekstop@2x.png 2x" media="(min-width: 1280px)" type="image/png">
+                    <source srcset="/images/about/mobile/cow-mobile.png 1x, /images/about/mobile/cow-mobile@2x.png 2x" type="image/png">
+                    <source srcset="/images/about/tablet/cow-tablet.png 1x, /images/about/tablet/cow-tablet@2x.png 2x" media="(min-width: 768px)" type="image/png">
+                    <source srcset="/images/about/dekstop/cow-dekstop.png 1x, /images/about/dekstop/cow-dekstop@2x.png 2x" media="(min-width: 1280px)" type="image/png">
                     <img class="about__img" alt="cow/milk">
                 </picture>
             </div>
