--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -15,11 +15,14 @@
 
 // container
 .container-products {
-  min-width: 320px;
   padding-left: 20px;
   padding-right: 20px;
   margin-right: auto;
   margin-left: auto;
+
+  @media screen and (max-width: 479px) {
+    max-width: 320px;
+  }
 
   @media screen and (min-width: 480px) {
     width: 480px;
