--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -315,7 +315,7 @@
   content: '';
   display: block;
 
-  background-image: url('../images/products/three-dots.svg');
+  background-image: url('../images/svg/three-dots.svg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
