--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,3 +1,15 @@
+// global
+a {
+  text-decoration: none;
+}
+
+ul,
+ol {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
 // section
 .section-products {
   padding-top: 120px;
