--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -5,10 +5,10 @@
         <div class="about__flex">
             <div class="about__img">
                 <picture>
-                    <source srcset="/images/about/mobile/cow-mobile.png 1x, /images/about/mobile/cow-mobile@2x.png 2x" type="image/png">
+                    <source srcset="/images/about/dekstop/cow-dekstop.png 1x, /images/about/dekstop/cow-dekstop@2x.png 2x" media="(min-width: 1280px)" type="image/png" >
                     <source srcset="/images/about/tablet/cow-tablet.png 1x, /images/about/tablet/cow-tablet@2x.png 2x" media="(min-width: 768px)" type="image/png">
-                    <source srcset="/images/about/dekstop/cow-dekstop.png 1x, /images/about/dekstop/cow-dekstop@2x.png 2x" media="(min-width: 1280px)" type="image/png">
-                    <img class="about__img" alt="cow/milk">
+                    <source srcset="/images/about/mobile/cow-mobile.png 1x, /images/about/mobile/cow-mobile@2x.png 2x" type="image/png">
+                    <img class="about__img" src="/images/about/dekstop/cow-dekstop.png" alt="cow/milk">
                 </picture>
             </div>
             <div class="about__list">
@@ -23,7 +23,9 @@
                     </p>
                 </ul>
                 <button class="button-white" type="button">Read more
-                    <svg></svg>
+                    <svg class="about__svg-btn" width="5" height="8"> 
+                        <use href=""></use>
+                    </svg>
                 </button>
             </div>
         </div>
