--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,10 +1,10 @@
-    <!--header-hiro-->
-    <section class="header-hiro-section">
+    <!--header-->
+   
     <header class="header">
         <div class="container headder-container">
 
             <nav class="header__nav">
-                <a class="header__logo link" href=""></a>
+                <a class="header__logo link" href=""><img src="/images//images_headder_hiro//logo 1.png" alt="/"></a>
                 <ul class="menu-list list">
                     <li class="menu-list__item"><a class="menu-list__link link" href="">Home</a></li>
                     <li class="menu-list__item"><a class="menu-list__link link" href="">About us</a></li>
@@ -13,22 +13,21 @@
                     <li class="menu-list__item"><a class="menu-list__link link" href="">Contact</a></li>
                 </ul>
             </nav>
-
+        <div class="btn-container">
             <button class="burger-btn" type="button" data-menu-open aria-expanded="false" aria-controls="mobile-menu">
-                <svg class="burger-icon" width="40" height="40" aria-label="Переключатель мобильного меню">
-                    <use href=""></use>
+                <svg class="burger-icon" width="20" height="12" aria-label="Переключатель мобильного меню">
+                    <use href="/images/svg/icons.svg#icon-burger"></use>
                 </svg>
             </button>
 
-            <button class="mobile-btn" type="button">Buy now</button>
-
-            <h1 class="title-headder-hiro-section"><span class="tittle-part">ice cream made with</span>passion</h1>
+            <button class="header-btn" type="button">Buy now</button>
         </div>
+            </div>
         <!-- mobile-menu -->
             <div class="mobile-menu" data-menu id="mobile-menu">
                 <button class="mobile-btn-close" type="button" data-menu-close>
-                    <svg class="mobile-close-icon" width="40" height="40">
-                        <use href=""></use>
+                    <svg class="mobile-close-icon" width="20" height="20">
+                        <use href="/images/svg/icons.svg#icon-burger-close"></use>
                     </svg>
                 </button>
 
@@ -46,6 +45,7 @@
                 </div>
             </div>
     </header>
-    </section>
+
+  
 
    
