--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,21 +1,45 @@
-.header-hiro-section {
-    background: #FFB8CA;
+.header {
+  display: flex;
+  align-items: center;
+  /* background: var(--background-pink); */
+  background: transparent;
+  min-height: auto;
+  border-bottom: none;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  /* border-bottom: 1px solid var(); */
+  
+  /* 
+  @media screen and (min-width: 768px) {
+    padding-top: ;
+    padding-bottom: ;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: ;
+    padding-bottom: ;
+  } */
 }
+
+/* .header-hiro-section {
+    background: var(--background-pink);
+    width: 100vw;
+} */
 
 .header__nav {
   display: flex;
   align-items: center;
 }
 
-.tittle-headder-hiro-section {
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 26px;
-    line-height: 30px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: var(--primary-white-color);
+.headder-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .burger-btn {
@@ -34,7 +58,7 @@
     color: var(--accent-color);
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1199px) {
     display: none;
   }
 }
@@ -64,7 +88,7 @@
 
     @media screen and (min-width: 768px) {
       display: none;
-    } 
+    }  
   }
 }
 
@@ -96,19 +120,65 @@
   fill: currentColor;
 }
 
+.mobile-btn {
+  background: var(--primary-white-color);
+  border-radius: 22px;
+  border: none;
+  padding: 5px 48px;
+  margin: 0 auto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.31;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: var(--accent-color);
+
+  /* @media screen and (max-width: 767px) {
+    display: none;
+  } */
+
+}
+
+.btn-container {
+  display: flex;
+  align-content: center;
+}
+
+.header-btn {
+  background: var(--primary-white-color);
+  border-radius: 22px;
+  border: none;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.31;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: var(--accent-color);
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  } 
+
+}
+
 .menu-list__link {
     font-family: var(--text-first);
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
-    line-height: 18px;
+    line-height: 1.28;
     display: flex;
     align-items: center;
     color: var(--primary-white-color);
 }
 
 .mobile-menu-list__link {
-    font-family: var(--text-first);
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
@@ -122,7 +192,7 @@
 .menu-list {
   display: flex;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1199px) {
     display: none;
   }
 }
