--- a/src/sass/layout/_hiro.scss
+++ b/src/sass/layout/_hiro.scss
@@ -4,22 +4,24 @@
 }
 
 .hiro-title {
-    width: 218px;
+    display: block;
+    width: 162px;
+    font-family: Titan One;
     font-style: normal;
     font-weight: normal;
-    font-size: 26px;
-    line-height: 30px;
+    font-size: 34px;
+    line-height: 1.13;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: var(--accent-color);
 }
 
 .hiro-title__part {
-    width: 218px;
+    font-family: Titan One;
     font-style: normal;
     font-weight: normal;
-    font-size: 26px;
-    line-height: 30px;
+    font-size: 22px;
+    line-height: 1.13;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: var(--primary-white-color);
