--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -16,7 +16,6 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     padding-top: 50px;
     padding-bottom: 165px;
-
     background: linear-gradient(
       to bottom,
       var(--primary-white-color) 197px,
@@ -28,21 +27,11 @@
     padding-top: 50px;
     padding-bottom: 165px;
 
-    @media screen and (min-device-pixel-ratio: 1),
-      screen and (min-resolution: 96dpi),
-      screen and (min-resolution: 1dppx) {
-      background-image: url(../images/contacts/bg-contacts.png),
-        linear-gradient(
-          to bottom,
-          var(--primary-white-color) 230px,
-          var(--background-section) 230px
-        );
-    }
+    background-image: url(../images/contacts/bg-contacts.png),
+      linear-gradient(to bottom, var(--primary-white-color) 230px, var(--background-section) 230px);
 
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url("../images/contacts/bg-contacts@2x.png"),
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: url('../images/contacts/bg-contacts@2x.png'),
         linear-gradient(
           to bottom,
           var(--primary-white-color) 230px,
@@ -52,11 +41,22 @@
   }
 }
 .contacts-list {
-  width: 100%;
-  max-width: 380px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 54px;
+  // width: 100%;
+  // max-width: 380px;
+  
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+  flex-wrap: wrap;
+  margin-left: -20px;
+  margin-bottom: -20px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-bottom: -30px;
+  }
 }
 
 .contacts-list__item {
@@ -68,9 +68,29 @@
   background: var(--primary-white-color);
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
-  & + & {
-    margin-top: 20px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 3 - 20px);
+    margin-left: 20px;
+    margin-bottom: 20px;
   }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
+    margin-bottom: 30px;
+  }
+  // & + & {
+  //   margin-top: 20px;
+  //   @media screen and (min-width: 768px) {
+  //   margin-top: 0;
+  //   margin-left: 20px;
+  //   @media screen and (min-width: 1200px) {
+  //   margin-left: 30px;
+  // }
+  // }
+
+  //
+  // }
 }
 
 .contacts-list__card-city {
@@ -81,9 +101,8 @@
     display: block;
     width: 100%;
     margin: 25px 0;
-    content: "";
-    // border-bottom: 1px solid var(--line-contacts);
-border-bottom: 1px solid red;
+    content: '';
+    border-bottom: 1px solid #e1e1e1;
 
     @media screen and (min-width: 768px) {
       margin: 30px 0;
@@ -149,6 +168,7 @@ border-bottom: 1px solid red;
 }
 
 .contacts-button-list {
+  margin-top: 54px;
 }
 
 .contacts-button-list__item {
