--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,14 +1,36 @@
 <footer class="footer">
     <div class="footer__wrapper container">
 <p class="footer__label">homemade ice cream made <span class="footer__span">with passion</span> </p>
-<ul class="footer__list">
-    <li class="footer__item"></li>
-    <li class="footer__item"></li>
-    <li class="footer__item"></li>
+<div class="footer__contacts">
+<ul class="social-list">
+    <li class="social-list__item">
+        <a href="https://github.com/" class="social-list__link">
+            <svg class="social-list__icon" width="20" height="20">
+                <use href="/images/svg/icons.svg#icon-git"></use>
+            </svg>
+        </a>
+    </li>
+    <li class="social-list__item">
+        <a href="https://web.telegram.org/k/" class="social-list__link">
+            <svg class="social-list__icon" width="20" height="20">
+                <use href="/images/svg/icons.svg#icon-telegram"></use>
+            </svg>
+                
+        </a>
+    </li>
+    <li class="social-list__item">
+        <a href="https://www.facebook.com/" class="social-list__link">
+            <svg class="social-list__icon" width="20" height="20">
+                <use href="/images/svg/icons.svg#icon-facebook"></use>
+            </svg>
+        </a>
+    </li>
 </ul>
 <p class="footer__adress">Feel free to contact
-    <a href="tel:+610383766284">+61 (0) 383 766 284</a> 
+    <a href="tel:+610383766284" class="footer__tel">+61 (0) 383 766 284</a> 
 </p>
-<p>© 2019 - IceCream. All Rights Reserved.</p>
-    </div>
+</div>
+</div>
+<p class="footer__text">&copy 2019 - IceCream. All Rights Reserved.</p>
+    
 </footer>
