--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,26 +1,132 @@
 .footer {
-    background-color: var(--backgound-section);
+    background: var(--background-section);
+    padding-bottom: 25px;
+    @media screen and (min-width: 768px) {
+        padding-bottom: 18px;
+    }
+    @media screen and (min-width: 1200px) {
+        padding-bottom: 10px;
+    }
+}
+.footer__wrapper {
+    padding-bottom: 43px;
+    margin-bottom: 22px;
+    border-bottom: 1px solid var(--line-contacts);
+    @media screen and (min-width: 768px) {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 91px;
+        margin-bottom: 29px;
+    }
+    @media screen and (min-width: 1200px) {
+        padding-bottom: 97px;
+        margin-bottom: 9px;
+    }
+    
 }
 .footer__label {
-font-family: var(--text-secondary);
-font-size: 30px;
-line-height: 1.13;
-letter-spacing: 0.04em;
-text-transform: uppercase;
-color: var(--background-label);
+    font-family: var(--text-secondary);
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: var(--background-label);
+    width: 232px;
+    margin-bottom: 15px;
+    @media screen and (min-width: 768px) {
+        font-size: 26px;
+        line-height: 1.15;
+        width: 340px;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 30px;
+        line-height: 1.13;
+        width: 472px;
+    }
 }
 .footer__span {
-font-size: 58px;
-line-height: 1.14;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-color: var(--accent-color);
+    display: block;
+    font-size: 34px;
+    line-height: 1.15;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: var(--accent-color);
+    width: 200px;
+    margin-bottom: 43px;
+    @media screen and (min-width: 768px) {
+        font-size: 48px;
+        width: 340px;
+        margin-bottom: 0;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 58px;
+        line-height: 1.14;
+        letter-spacing: 0.06em;
+        width: 100%;
+    }
+}
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: end;
+    margin-bottom: 46px;
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+    }
+}
+.social-list__item {
+    width: 34px;
+    height: 34px;
+    & + & {
+        margin-left: 28px;
+    }
+}
+.social-list__link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FEA5BB;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color) ;
+    }
+
 }
 .footer__adress {
-font-family: var(--text-first);
-font-weight: bold;
-font-size: 16px;
-line-height: 1.86;
-letter-spacing: 0.02em;
-color: var(--text-color-black);
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 1.86;
+    letter-spacing: 0.02em;
+    color: var(--text-color-black);
+    text-align: end;
+    margin-bottom: 65px;
+    @media screen and (min-width: 768px) {
+        font-size: 14px;
+        margin-bottom: 0;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 16px;
+    }
+    
+}
+.footer__tel {
+    color: var(--accent-color);
+}
+.footer__text {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.52;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--text-color-gray);
+    width: 140px;
+    margin: 0 auto;
+    @media screen and (min-width: 768px) {
+        line-height: 1.86;
+        width: 100%;
+    }
 }
